--- a/androidApp/src/main/res/layout/activity_forms_add_aliments.xml
+++ b/androidApp/src/main/res/layout/activity_forms_add_aliments.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:ignore="LabelFor"
     tools:context=".FormsAddAliments">
 
@@ -19,41 +18,49 @@
         <Button
             android:id="@+id/button_return_list_product"
             android:layout_width="match_parent"
-            android:layout_height="68dp"
-            android:drawableStart="@drawable/ic_arrow_left"
-            android:drawableLeft="@drawable/ic_arrow_left"
+            android:layout_height="wrap_content"
             android:text="@string/btn_return_product"
-            android:textColor="@color/light_green" />
+            android:textColor="@color/light_green"
+            android:drawableLeft="@drawable/ic_arrow_left"
+            android:drawableStart="@drawable/ic_arrow_left"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="672dp"
             android:orientation="vertical">
 
+            <TextView
+                android:layout_width="match_parent"
 
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@color/light_green"
+                android:elevation="1dp"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="@string/title_forms_add"
+                android:textColor="@color/white"
+                android:textSize="19sp"
+                android:textStyle="bold" />
 
+            <TextView
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:id="@+id/text_name"
+                android:layout_width="363dp"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/arial"
 
-                <TextView
-                    android:id="@+id/text_name"
-                    android:layout_width="363dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:fontFamily="@font/arial"
-
-                    android:lineSpacingExtra="8sp"
-                    android:text="@string/text_name"
-                    android:textColor="@color/black"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:typeface="normal" />
-
-
+                android:lineSpacingExtra="8sp"
+                android:text="@string/text_name"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:typeface="normal" />
 
             <EditText
                 android:id="@+id/AlimentName"
-                android:background="@drawable/rounded_edittext"
                 android:maxLength="30"
+
                 android:autofillHints="aliment name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -61,9 +68,10 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="15dp"
                 android:layout_marginBottom="5dp"
+                android:background="@drawable/shape_background"
                 android:inputType="textPersonName"
                 android:padding="15dp"
-
+                android:textColor="@color/light_green"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -74,15 +82,15 @@
                 android:fontFamily="@font/arial"
                 android:lineSpacingExtra="8sp"
                 android:text="@string/text_quantite"
-                android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                android:typeface="normal" />
+                android:typeface="normal"
+                />
 
             <EditText
                 android:id="@+id/AlimentQuantite"
                 android:maxLength="4"
-                android:background="@drawable/rounded_edittext"
+
                 android:autofillHints="aliment quantite"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -90,22 +98,23 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="15dp"
                 android:layout_marginBottom="5dp"
+                android:background="@drawable/shape_background"
                 android:inputType="number"
                 android:padding="15dp"
+                android:textColor="@color/light_green"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/text_date"
                 android:layout_width="363dp"
-                android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-
                 android:layout_marginBottom="10dp"
+
+                android:layout_height="wrap_content"
                 android:fontFamily="@font/arial"
                 android:lineSpacingExtra="8sp"
                 android:text="@string/text_date"
-                android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:typeface="normal" />
@@ -152,14 +161,13 @@
                 -->
             <TextView
                 android:id="@+id/text_categorie"
-                android:layout_width="345dp"
-                android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
+                android:layout_width="345dp"
+                android:layout_height="wrap_content"
                 android:fontFamily="@font/arial"
                 android:lineSpacingExtra="8sp"
                 android:text="@string/text_categorie"
-                android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:typeface="normal" />
@@ -167,7 +175,6 @@
 
             <Spinner
                 android:id="@+id/categorie_spinner"
-                style="@style/SpinnerTheme"
                 android:layout_width="325dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
@@ -197,14 +204,13 @@
 
             <TextView
                 android:id="@+id/text_storage"
-                android:layout_width="345dp"
-                android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
+                android:layout_width="345dp"
+                android:layout_height="wrap_content"
                 android:fontFamily="@font/arial"
                 android:lineSpacingExtra="8sp"
                 android:text="@string/text_storage"
-                android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:typeface="normal" />
@@ -212,7 +218,6 @@
 
             <Spinner
                 android:id="@+id/place_spinner"
-                style="@style/SpinnerTheme"
                 android:layout_width="325dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_height="wrap_content"
@@ -225,13 +230,12 @@
 
             <Button
                 android:id="@+id/button_add_aliment"
-                android:layout_width="142dp"
+                android:layout_width="123dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
-                android:text="@string/btn_add"
-                android:textColor="@color/dark_grey" />
+                android:text="@string/btn_add" />
 
 
         </LinearLayout>
