--- a/androidApp/src/main/res/layout/fragment_login.xml
+++ b/androidApp/src/main/res/layout/fragment_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:gravity="center"
     android:layout_width="match_parent"
@@ -20,6 +21,8 @@
             android:textStyle="bold"
             android:text="Bonjour" />
 
+
+
         <TextView
             android:id="@+id/textViewLogin"
             android:layout_width="match_parent"
@@ -28,27 +31,45 @@
             android:textColor="@color/darkGreen"
             android:textStyle="bold"
             android:layout_marginTop="10dp"
+            android:layout_marginBottom="60dp"
             android:text="Connectez-vous à votre compte" />
+
+
 
         <EditText
             android:id="@+id/editTextUser"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:layout_marginTop="90dp"
-            android:inputType="textEmailAddress"
-            android:drawableLeft="@drawable/ic_user"
-            android:text="E mail" />
-
+            android:background="@drawable/rounded_edittext"
+            android:inputType="textPersonName"
+            android:maxLength="30"
+            android:padding="15dp"
+            android:layout_marginBottom="20dp"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="30dp"
+            tools:layout_editor_absoluteY="235dp"
+            android:drawableLeft="@drawable/ic_user_icon"
+            android:drawableStart="@drawable/ic_user_icon"
+            android:drawablePadding="15dp"/>
 
         <EditText
             android:id="@+id/editTextPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
+            android:background="@drawable/rounded_edittext"
             android:inputType="textPassword"
-            android:drawableLeft="@drawable/ic_password"
-            android:text="Password" />
+            android:maxLength="30"
+            android:padding="15dp"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="30dp"
+            tools:layout_editor_absoluteY="235dp"
+            android:drawableLeft="@drawable/ic_password_icon"
+            android:drawableStart="@drawable/ic_password_icon"
+            android:drawablePadding="15dp"/>
 
         <TextView
 
@@ -74,7 +95,7 @@
             android:id="@+id/buttonLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/button_background_login"
+            android:background="@drawable/rounded_button"
             android:textColor="@color/darkGreen"
             android:radius="30dp"
             android:layout_marginBottom="50dp"
@@ -91,7 +112,7 @@
             android:id="@+id/buttonRegister"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/button_background_signin"
+            android:background="@drawable/sign_up_inscription_button"
             android:textColor="@color/white"
             android:layout_marginTop="5dp"
             android:text="Inscription" />
