--- a/androidApp/src/main/res/layout/fragment_login.xml
+++ b/androidApp/src/main/res/layout/fragment_login.xml
@@ -41,7 +41,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/rounded_edittext"
-            android:inputType="textPersonName"
+            android:inputType="textEmailAddress"
             android:maxLength="30"
             android:padding="15dp"
             android:layout_marginBottom="20dp"
