--- a/androidApp/src/main/res/layout/fragment_settings.xml
+++ b/androidApp/src/main/res/layout/fragment_settings.xml
@@ -27,4 +27,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/button_send_code"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="26dp"
+        android:text="Test Send Code"
+        app:layout_constraintStart_toStartOf="@+id/button_go_reset_password"
+        app:layout_constraintTop_toBottomOf="@+id/button_go_reset_password" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
