--- a/androidApp/src/main/res/layout/product_popup.xml
+++ b/androidApp/src/main/res/layout/product_popup.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/product_popup"
     android:layout_width="320dp"
     android:layout_height="400dp"
     android:padding="@dimen/default_padding">
