--- a/androidApp/src/main/res/layout/activity_sign_up.xml
+++ b/androidApp/src/main/res/layout/activity_sign_up.xml
@@ -1,23 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="112dp"
-        android:layout_marginLeft="112dp"
-        android:layout_marginTop="576dp"
-        android:background="@drawable/sign_up_inscription_button"
-        android:text="@string/inscription"
-        android:textColor="@color/white"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/main_title"
@@ -32,6 +19,25 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <EditText
+        android:id="@+id/username"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="148dp"
+        android:background="@drawable/rounded_edittext"
+        android:drawableStart="@drawable/ic_user_icon"
+        android:drawableLeft="@drawable/ic_user_icon"
+        android:drawablePadding="15dp"
+        android:inputType="textPersonName"
+        android:maxLength="30"
+        android:padding="15dp"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/password_title"
         style="@style/subtitles_sign_up_page"
@@ -40,23 +46,112 @@
         android:layout_gravity="center"
         android:layout_marginStart="268dp"
         android:layout_marginLeft="268dp"
-        android:layout_marginTop="148dp"
+        android:layout_marginTop="128dp"
         android:text="@string/username"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/subtitle_confirm_password"
+        style="@style/subtitles_sign_up_page"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginStart="84dp"
+        android:layout_marginLeft="84dp"
+        android:layout_marginTop="344dp"
+        android:text="@string/confirm_password"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <EditText
-        android:id="@+id/username"
+        android:id="@+id/password"
+        android:layout_width="290dp"
+        android:layout_height="54dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="260dp"
+        android:background="@drawable/rounded_edittext"
+        android:drawableStart="@drawable/ic_password_icon"
+        android:drawableLeft="@drawable/ic_password_icon"
+        android:drawablePadding="15dp"
+        android:inputType="textPassword"
+        android:maxLength="30"
+        android:padding="15dp"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/email"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
-        android:layout_marginTop="168dp"
+        android:layout_marginTop="480dp"
         android:background="@drawable/rounded_edittext"
-        android:drawableStart="@drawable/ic_user_icon"
-        android:drawableLeft="@drawable/ic_user_icon"
+        android:drawableStart="@drawable/ic_mail_icon"
+        android:drawableLeft="@drawable/ic_mail_icon"
         android:drawablePadding="15dp"
-        android:inputType="textPersonName"
+        android:inputType="textEmailAddress"
+        android:maxLength="30"
+        android:padding="15dp"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <CheckBox
+        android:id="@+id/checkBox1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:checked="false"
+        app:layout_constraintBottom_toBottomOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.923"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.42" />
+
+    <CheckBox
+        android:id="@+id/checkBox2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:checked="false"
+        app:layout_constraintBottom_toBottomOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.923"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.59" />
+
+    <TextView
+        android:id="@+id/email_title"
+        style="@style/subtitles_sign_up_page"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginStart="300dp"
+        android:layout_marginLeft="300dp"
+        android:layout_marginTop="456dp"
+        android:text="@string/email"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/confirm_password"
+        android:layout_width="290dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="368dp"
+        android:autofillHints="aliment name"
+        android:background="@drawable/rounded_edittext"
+        android:drawableStart="@drawable/ic_password_icon"
+        android:drawableLeft="@drawable/ic_password_icon"
+        android:drawablePadding="15dp"
+        android:inputType="textPassword"
         android:maxLength="30"
         android:padding="15dp"
         android:textSize="18sp"
@@ -72,117 +167,51 @@
         android:layout_gravity="center"
         android:layout_marginStart="204dp"
         android:layout_marginLeft="204dp"
-        android:layout_marginTop="256dp"
+        android:layout_marginTop="236dp"
         android:text="@string/password_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="290dp"
-        android:layout_height="54dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="280dp"
-        android:background="@drawable/rounded_edittext"
-        android:drawableStart="@drawable/ic_password_icon"
-        android:drawableLeft="@drawable/ic_password_icon"
-        android:drawablePadding="15dp"
-        android:inputType="textPassword"
-        android:maxLength="30"
-        android:padding="15dp"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <CheckBox
+        android:id="@+id/Terms_checkbox"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
 
-    <EditText
-        android:id="@+id/confirm_password"
-        android:layout_width="290dp"
-        android:layout_height="56dp"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
-        android:layout_marginTop="388dp"
-        android:autofillHints="aliment name"
-        android:background="@drawable/rounded_edittext"
-        android:drawableStart="@drawable/ic_password_icon"
-        android:drawableLeft="@drawable/ic_password_icon"
-        android:drawablePadding="15dp"
-        android:inputType="textPassword"
-        android:maxLength="30"
-        android:padding="15dp"
-        android:textSize="18sp"
-        android:textStyle="bold"
+        android:layout_marginTop="560dp"
+        android:layout_weight="1"
+        android:text="J'accepte avoir lu et accepter les"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/subtitle_confirm_password"
-        style="@style/subtitles_sign_up_page"
+        android:id="@+id/terms_link"
+        style="@style/terms_link_style"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginStart="84dp"
-        android:layout_marginLeft="84dp"
-        android:layout_marginTop="364dp"
-        android:text="@string/confirm_password"
+        android:layout_height="18dp"
+        android:layout_marginStart="200dp"
+        android:layout_marginLeft="200dp"
+        android:layout_marginTop="592dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:linksClickable="true"
+        android:radius="30dp"
+        android:text="termes d'utilisation"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/email_title"
-        style="@style/subtitles_sign_up_page"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/button"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginStart="300dp"
-        android:layout_marginLeft="300dp"
-        android:layout_marginTop="476dp"
-        android:text="@string/email"
+        android:layout_marginStart="120dp"
+        android:layout_marginLeft="120dp"
+        android:layout_marginTop="636dp"
+        android:background="@drawable/sign_up_inscription_button"
+        android:text="@string/inscription"
+        android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/email"
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="500dp"
-        android:background="@drawable/rounded_edittext"
-        android:drawableStart="@drawable/ic_mail_icon"
-        android:drawableLeft="@drawable/ic_mail_icon"
-        android:drawablePadding="15dp"
-        android:inputType="textEmailAddress"
-        android:maxLength="30"
-        android:padding="15dp"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <CheckBox
-        android:id="@+id/checkBox2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:checked="false"
-        app:layout_constraintBottom_toBottomOf="@+id/button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.684" />
-
-    <CheckBox
-        android:id="@+id/checkBox1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:checked="false"
-        app:layout_constraintBottom_toBottomOf="@+id/button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.488" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
